--- a/portal/WebContent/common/css/style.css
+++ b/portal/WebContent/common/css/style.css
@@ -431,7 +431,7 @@ img {
 #sessioninfo {
 	margin-top: -175px;
 	margin-left: -350px;
-	width: 700px;;
+	width: 700px;
 	height: 350px;
 }
 
@@ -447,7 +447,7 @@ img {
 #underconstruction {
 	margin-left: -125px;
 	margin-top: -50px;
-	width: 250px;;
+	width: 250px;
 	height: 100px;
 }
 
